force-app/main/default/objects/sfsCustomGanttActionOptimizeSettings__c/sfsCustomGanttActionOptimizeSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Custom Gantt Action Optimize Settings</label>
</CustomObject>