force-app/main/default/objects/sfsCustomGanttActionOptimizeSettings__c/fields/Default_Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>Default_Scheduling_Policy__c</fullName>
    <description>Name of the scheduling policy to use when running optimization via the custom gantt action. When empty, the user is allowed to pick a scheduling policy.</description>
    <inlineHelpText>Name of the scheduling policy to use when running optimization via the custom gantt action. When empty, the user is allowed to pick a scheduling policy.</inlineHelpText>
    <label>Default Scheduling Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>