force-app/main/default/objects/sfsCustomGanttActionOptimizeSettings__c/fields/Disable_All_Task_Mode__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Task_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable the option to choose the All Task Mode, which means it defaults to the &quot;All&quot; option.</description>
    <inlineHelpText>Disable the option to choose the All Task Mode, which means it defaults to the &quot;All&quot; option.</inlineHelpText>
    <label>Disable All Task Mode</label>
    <type>Checkbox</type>
</CustomField>