force-app/main/default/objects/sfsCustomGanttActionOptimizeSettings__c/fields/Filter_By_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_By_Field_API_Name__c</fullName>
    <description>API name of the checkbox field on the Service Appointment object which is used by optimization to filter which records can be optimized. If empty, all records can be optimized, apart from pinned appointments.</description>
    <inlineHelpText>API name of the checkbox field on the Service Appointment object which is used by optimization to filter which records can be optimized. If empty, all records can be optimized, apart from pinned appointments.</inlineHelpText>
    <label>Filter By Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>