force-app/main/default/objects/sfsCustomGanttActionOptimizeSettings__c/fields/Filter_By_Fields_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Filter_By_Fields_API_Names__c</fullName>
    <description>Comma separated list of Service Appointment checkbox fields from which the dispatcher is allowed to select one to only optimize records for which that checkbox field is checked. Only applies when &quot;Filter By Field API Name&quot; field is empty.</description>
    <inlineHelpText>Comma separated list of Service Appointment checkbox fields from which the dispatcher is allowed to select one to only optimize records for which that checkbox field is checked. Only applies when &quot;Filter By Field API Name&quot; field is empty.</inlineHelpText>
    <label>Filter By Fields API Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>